Added SEO functionalities and Add to list feature

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
     scrollbar-width: none; /* Firefox */
   }
   .login {
-    background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/a56dc29b-a0ec-4f6f-85fb-50df0680f80f/2f8ae902-8efe-49bb-9a91-51b6fcc8bf46/IN-en-20240617-popsignuptwoweeks-perspective_alpha_website_large.jpg");
+    background-image: url("./images/StreamHaven\ Cover.webp");
     background-repeat: no-repeat;
     background-size: cover;
   }
